added authorization through Google

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,8 +29,14 @@ main {
 	flex: 1 0 auto;
 }
 
+.container {
+    max-width: 1064px;
+    padding: 0 20px;
+    margin: 0 auto;
+}
+
 .App {
 	display: flex;
 	flex-direction: column;
-	min-height: 100%;
+	min-height: 100vh;
 }
