add  ui-containers for profile

--- a/src/shared/styles/root.scss
+++ b/src/shared/styles/root.scss
@@ -3,5 +3,6 @@
     --white-100: white;
     --white-70: rgba(255, 255, 255, 0.74);
     --black-100: black;
-
+    --dark: #1e1e1e;
+    --gray: #414851;
 }
