--- a/src/entities/user-google/ui/GoogleProfile/GoogleProfile.module.scss
+++ b/src/entities/user-google/ui/GoogleProfile/GoogleProfile.module.scss
@@ -1,30 +1,13 @@
-.profile {
-  margin-top: 100px;
-  display: flex;
-  gap: 30px;
-}
-
-.profile__item {
-  margin-top: 16px;
-
-  &:first-child {
-    margin-top: 0px;
-  }
-
-  font-size: 20px;
-}
-
 .profile__gmail {
     word-wrap: break-word;
     word-break: break-all;
 }
 
-@media (max-width: 568px) {
-  .profile {
-    flex-direction: column;
-    align-items: center;
-  }
-  .profile__item {
-    font-size: 18px;
+@media (max-width: 768px) {
+  .btn {
+      display: flex;
+      justify-content: center;
   }
 }
+
+
