--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -7,6 +7,7 @@
 
 @media (max-width: 768px) {
     .profiles {
-        margin-top: 50px;
+        flex-direction: column;
+        gap: 60px;
     }
 }
