--- a/src/shared/ui/Profile/Profile.module.scss
+++ b/src/shared/ui/Profile/Profile.module.scss
@@ -21,19 +21,33 @@
 
 }
 
+.profile__element_notVisible {
+  display: none;
+}
+
 .profile__head {
   color: var(--gray);
 }
 .profile__description {
   font-size: 20px;
+  margin-top: 6px;
+}
+
+
+@media (max-width: 768px) {
+  .profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .profile__body {
+    width: 100%;
+    max-width: 400px;
+  }
 }
 
 
 @media (max-width: 568px) {
-  .profile {
-    flex-direction: column;
-    align-items: center;
-  }
   .profile__description {
     font-size: 18px;
   }
