fix reexport and init isauth in initialstate

--- a/src/shared/ui/Profile/Profile.module.scss
+++ b/src/shared/ui/Profile/Profile.module.scss
@@ -5,11 +5,12 @@
 .profile__title {
   font-size: 25px;
   font-weight: 500;
-  color: #1e1e1e;
+  color: var(--dark);
+  text-align: center;
 }
 
 .profile__body {
-  margin-top: 32px;
+  margin-top: 8px;
 }
 
 .profile__element {
