--- a/src/shared/ui/ItemsContainer/ItemsContainer.module.scss
+++ b/src/shared/ui/ItemsContainer/ItemsContainer.module.scss
@@ -1,28 +1,31 @@
 .container {
     margin-top: 32px;
+}
+
+.container__body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
 }
 
-.container_notFound {
+.container__body_notFound {
     display: block;
 }
 
 @media (max-width: 992px) {
-    .container {
+    .container__body {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media (max-width: 768px) {
-    .container {
+    .container__body {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 568px) {
-    .container {
+    .container__body {
         grid-template-columns: repeat(1, 1fr);
     }
 }
