--- a/src/widgets/footer/ui/Footer.module.scss
+++ b/src/widgets/footer/ui/Footer.module.scss
@@ -12,6 +12,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 60px;
+  flex-wrap: wrap;
 }
 
 .footer__links {
@@ -24,6 +26,7 @@
   gap: 40px;
   color: var(--white-100);
   font-size: 14px;
+  flex-wrap: wrap;
 }
 
 .footer__account {
