--- a/src/widgets/header/ui/Header.module.scss
+++ b/src/widgets/header/ui/Header.module.scss
@@ -1,6 +1,8 @@
 .header {
     background-color: var(--blue-1);
     padding: 50px 0px;
+    z-index: 10;
+    position: relative;
 }
 
 .header__body {
@@ -16,4 +18,52 @@
     display: flex;
     gap: 48px;
 }
+
+.header__button {
+    display: none;
+}
+
+.header__burger {
+    display: none;
+    position: fixed;
+    transition: .4s;
+    transform: translateX(-100%);
+    background-color: var(--white-100);
+    width: 100%;
+    height: 100%;
+    padding-top: 180px;
+    padding-bottom: 50px;
+    z-index: 9;
+    overflow-y: auto;
+}
+
+.header__burger_open {
+    transform: translateX(0);
+}
+
+.header__burgerLinks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    li {
+        width: 100%;
+        text-align: center;
+    };
+}
+
+@media (max-width: 700px) {
+    .header__links {
+        display: none;
+    }
+
+    .header__button {
+        display: block;
+    }
+    
+    .header__burger {
+        display: block;
+    }
+}
+
 
